# npyquick

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml  snap.yml  test.yml
docs/: RELEASE_CHECKLIST.md  behavior.md
packaging/appimage/: AppRun  build.sh  io.github.liukdiihmieu.npyquick.appdata.xml  io.github.liukdiihmieu.npyquick.desktop  npyquick.desktop
packaging/pyinstaller/: npyquick.spec  npyquick_entry.py
packaging/windows/: build.ps1  npyquick.iss
snap/: README.md  snapcraft.yaml
snap/gui/: npyquick.desktop
src/npyquick/: __init__.py  app.py  desktop.py  main.py  model.py  viewer.py
src/npyquick/core/: complexproj.py  coord.py  limits.py  npyheader.py  profile.py  stats.py
src/npyquick/resources/: io.github.liukdiihmieu.npyquick.mime.xml
src/npyquick/views/: base.py  dual_image.py  histogram.py  image.py  lineplot.py  pixel_size_dialog.py  table.py
tests/: conftest.py  test_app_complex.py  test_app_workflow.py  test_complexproj.py  test_core_coord.py  test_core_profile.py  test_desktop.py  test_dual_image.py  test_eval_expr.py  test_export_format.py  test_export_gating.py  test_histogram.py  test_image_canvas.py  test_image_canvas_hooks.py  test_image_complex.py  test_large_files.py  test_limits.py  test_lineplot.py  test_model.py  test_npyheader.py  test_npz_picker.py  test_stability.py  test_stats.py  test_tab_shortcuts.py  test_table_model.py  test_theme.py  test_version.py
