[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npyquick"
version = "0.1.0"
description = "Quick GUI viewer for 2D grayscale .npy files with interactive cross section analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
npyquick = "npyquick.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/npyquick"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
